--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "big-integer": "^1.6.51",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "emoji-picker-react": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
